--- a/data.html
+++ b/data.html
@@ -14,7 +14,7 @@
           <h1 class="font-bold text-xl">
             Aid for Injured in the Quota Movement
           </h1>
-          <p class="text-base font-medium">
+          <p class="text-base font-light">
             The recent floods in Noakhali have caused significant damage to
             homes infrastructure. Your donation will help provide essential
             supplies and to those affected by this disaster. Every contribution,
@@ -43,7 +43,7 @@
           <h1 class="font-bold text-xl">
             Donate for Flood at Noakhali, Bangladesh
           </h1>
-          <p class="text-base font-medium">
+          <p class="text-base font-light">
             The recent floods in Noakhali have caused significant damage to
             homes infrastructure. Your donation will help provide essential
             supplies and to those affected by this disaster. Every contribution,
