--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             colors: {
               btn_color: "#B4F461",
             },
+            fontFamily: {
+              Lexend: ["Lexend", "system-ui"],
+            },
           },
         },
       };
@@ -26,8 +29,8 @@
     </style>
     <title>Donate Bangladesh</title>
   </head>
-  <body>
-          <!-- navbar start -->
+  <body class="font-Lexend">
+    <!-- navbar start -->
     <div class="sticky top-0 bg-slate-100/60 backdrop-blur-md">
       <div class="navbar pt-3 pb-5">
         <div class="w-full lg:w-10/12 mx-auto">
@@ -39,13 +42,13 @@
           <div
             class="navbar-center lg:space-x-4 flex justify-center items-center"
           >
-            <img class="hidden lg:inline" src="./assets/logo.png" alt="" />
+            <img class="w-6 lg:w-10" src="./assets/logo.png" alt="" />
             <p class="lg:text-xl text-sm font-semibold">Donate Bangladesh</p>
           </div>
           <div class="navbar-end lg:space-x-2 flex items-center">
-            <img src="./assets/coin.png" alt="" />
-            <p class="font-medium lg:text-xl text-slate-600">
-              <span id="walet-money">5500 </span>BDT
+            <img class="w-6 lg:w-10" src="./assets/coin.png" alt="" />
+            <p class="font-medium text-sm lg:text-xl text-slate-600">
+              <span id="walet-money">5500</span> BDT
             </p>
           </div>
         </div>
@@ -55,16 +58,19 @@
       <!-- donation and history tab starts -->
       <div class="flex justify-center mt-2 pb-6 gap-3 mb-4">
         <button id="donation-btn" class="btn bg-btn_color">Donation</button>
-        <button id="history-btn" class="btn bg-white border border-slate-400">History</button>
+        <button id="history-btn" class="btn bg-white border border-slate-400">
+          History
+        </button>
       </div>
     </div>
     <!-- donation and history tab ends -->
 
-
     <!-- cards section starts -->
     <section id="donation" class="w-10/12 mx-auto mb-10 space-y-6">
       <!-- noakali -->
-      <div class="lg:flex justify-between border-2 border-slate-200 p-4 rounded-2xl">
+      <div
+        class="lg:flex justify-between border-2 border-slate-200 p-4 rounded-2xl"
+      >
         <div class="lg:w-1/2">
           <img class="w-11/12" src="./assets/noakhali.png" alt="" />
         </div>
@@ -74,12 +80,16 @@
           <div
             class="bg-slate-200 flex justify-center items-center p-2 rounded-lg gap-3"
           >
-            <img class="" src="./assets/coin.png" alt="" /><span id="noa-total-amount">6000</span>BDT
+            <img class="" src="./assets/coin.png" alt="" /><span
+              id="noa-total-amount"
+              >6000</span
+            >
+            BDT
           </div>
           <h1 class="font-bold text-xl">
             Donate for Flood at Noakhali, Bangladesh
           </h1>
-          <p class="text-base font-medium">
+          <p class="text-base font-light">
             The recent floods in Noakhali have caused significant damage to
             homes infrastructure. Your donation will help provide essential
             supplies and to those affected by this disaster. Every contribution,
@@ -88,32 +98,143 @@
             need.
           </p>
           <input
-            id="noakhali_input"
+            id="noakhali-flood"
             type="number"
             placeholder="Type here"
             class="input input-bordered w-full"
           />
 
-          <div><button id="noakhali_btn" class="btn w-full bg-btn_color">Donate Now</button></div>
+          <div>
+            <button id="noakhali-btn" class="btn w-full bg-btn_color">
+              Donate Now
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- feni -->
+      <div
+        class="lg:flex justify-between border-2 border-slate-200 p-4 rounded-2xl"
+      >
+        <div class="lg:w-1/2">
+          <img class="w-11/12" src="./assets/feni.png" alt="" />
+        </div>
+        <div
+          class="lg:w-1/2 mt-3 lg:mt-0 flex flex-col justify-between items-start lg:space-y-0 space-y-5"
+        >
+          <div
+            class="bg-slate-200 flex justify-center items-center p-2 rounded-lg gap-3"
+          >
+            <img class="" src="./assets/coin.png" alt="" /><span
+              id="feni-total-amount"
+              >6000</span
+            >
+            BDT
+          </div>
+          <h1 class="font-bold text-xl">
+            Donate for Flood Relief in Feni,Bangladesh
+          </h1>
+          <p class="text-base font-light">
+            The recent floods in Noakhali have caused significant damage to
+            homes infrastructure. Your donation will help provide essential
+            supplies and to those affected by this disaster. Every contribution,
+            big or small, makes difference. Please join us in supporting the
+            relief efforts and making a positive impact on the lives of those in
+            need.
+          </p>
+          <input
+            id="feni-flood"
+            type="number"
+            placeholder="Type here"
+            class="input input-bordered w-full"
+          />
+
+          <div>
+            <button id="feni-btn" class="btn w-full bg-btn_color">
+              Donate Now
+            </button>
+          </div>
         </div>
       </div>
 
 
+      <!-- quota movement -->
+      <div
+      class="lg:flex justify-between border-2 border-slate-200 p-4 rounded-2xl"
+    >
+      <div class="lg:w-1/2">
+        <img class="w-11/12" src="./assets/quota-protest.png" alt="" />
+      </div>
+      <div
+        class="lg:w-1/2 mt-3 lg:mt-0 flex flex-col justify-between items-start lg:space-y-0 space-y-5"
+      >
+        <div
+          class="bg-slate-200 flex justify-center items-center p-2 rounded-lg gap-3"
+        >
+          <img class="" src="./assets/coin.png" alt="" /><span
+            id="quota-total-amount"
+            >6000</span
+          >
+          BDT
+        </div>
+        <h1 class="font-bold text-xl">
+          Donate for Flood Relief in Feni,Bangladesh
+        </h1>
+        <p class="text-base font-light">
+          The recent floods in Noakhali have caused significant damage to
+          homes infrastructure. Your donation will help provide essential
+          supplies and to those affected by this disaster. Every contribution,
+          big or small, makes difference. Please join us in supporting the
+          relief efforts and making a positive impact on the lives of those in
+          need.
+        </p>
+        <input
+          id="quota-movement"
+          type="number"
+          placeholder="Type here"
+          class="input input-bordered w-full"
+        />
 
-
-
-
+        <div>
+          <button id="quota-btn" class="btn w-full bg-btn_color">
+            Donate Now
+          </button>
+        </div>
+      </div>
+    </div>
+    </section>
 
     <!-- cards section ends -->
+    <!-- history section -->
+    <section id="history" class="hidden w-10/12 mx-auto space-y-6">
+      <div class="border border-slate-200 p-8 rounded-xl">
+        <h1 class="font-semibold text-sm lg:font-bold lg:text-xl">
+          96500 Taka is Donated for famine-2024 at Feni, Bangladesh
+        </h1>
+        <p class="font-light text-sm lg:font-light lg:text-base">
+          Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)
+        </p>
+      </div>
+    </section>
 
+    <!-- modal section -->
+    <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box flex justify-center items-center flex-col gap-6">
+        <h3 class="text-4xl font-extrabold">Congrates!</h3>
+        <div><img src="./assets/coin.png" alt="" /></div>
+        <p class="font-semibold text-lg">You Have Donated For Humankind</p>
+        <h1 class="font-bold text-2xl">Successfully</h1>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn bg-slate-300">close confirmation</button>
+          </form>
+        </div>
+      </div>
+    </dialog>
 
-     <!-- history section -->
-      <section id="history" class="hidden">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nemo ipsam laborum nesciunt sint unde, commodi iure consequatur doloremque quia dolorem quas voluptatem. Ratione harum porro nisi eaque optio facere perferendis, quis suscipit ea a consequatur impedit nihil. Quia unde, obcaecati possimus consequatur consectetur aperiam dolore nulla sint illum sed voluptatem ullam magni repellendus quidem saepe libero commodi ut vel molestias exercitationem, ex blanditiis nam doloribus? Velit, fugit. Nobis suscipit iusto et a totam. Modi, assumenda recusandae! Dicta eum placeat nostrum eos inventore tenetur omnis, aliquam iste sunt, illum, excepturi voluptatem dignissimos ullam dolores magnam voluptates. Natus dolor nobis consequatur, pariatur omnis voluptatibus sed libero! Minima placeat, ab hic modi porro beatae cum vero vel maiores expedita ducimus dolores sunt quis saepe omnis consequuntur numquam architecto iure in harum officiis? Vitae veniam mollitia quos beatae voluptatibus tenetur? Voluptate nihil voluptatum blanditiis distinctio totam praesentium, eius, ratione quos, dolore reiciendis tempora dolorum maiores perferendis optio quaerat? Minus neque labore fuga omnis expedita eveniet totam numquam perspiciatis sint nihil, aliquam id eius ab ratione veniam error, quaerat adipisci hic assumenda. Quia incidunt minus id mollitia velit modi eveniet neque aspernatur autem. Alias hic consequuntur ab nulla animi repudiandae molestias laudantium veniam accusantium necessitatibus! Ipsa quisquam ab facere cum accusantium molestiae amet natus aliquam. Ut, consectetur porro dicta officiis dignissimos distinctio odit iure at est assumenda harum nihil? Possimus placeat iure quaerat nobis eaque velit ipsa repudiandae ullam? Sapiente reiciendis doloribus obcaecati itaque autem maxime omnis repellat reprehenderit nam laborum molestiae, architecto a? Repudiandae eum optio adipisci praesentium repellat reprehenderit quod aliquam consectetur, consequuntur, doloribus aut cum nesciunt distinctio maxime eaque temporibus ipsum expedita nisi nostrum porro culpa! Aperiam vel magnam facilis modi sed minima tempore, quas fugit, necessitatibus debitis animi laborum maiores in? Perferendis quis repellendus incidunt. Omnis perspiciatis autem pariatur modi nam praesentium dolorum ipsum enim odit, quis aspernatur blanditiis hic molestiae obcaecati quae incidunt, provident nihil rem minima, expedita odio magni facere. Vitae culpa cumque quam eum impedit vero laborum porro esse aspernatur est? Repudiandae consequatur eius magni quas blanditiis, accusamus ipsam mollitia voluptate optio ut adipisci reiciendis est quod corporis quae tempora unde iusto? Nobis, distinctio rem inventore est esse architecto repellendus officiis vero aspernatur consequatur iusto labore error sapiente necessitatibus, voluptates quos suscipit, blanditiis quidem illum! Officia rerum molestias repellendus fuga officiis itaque soluta at nostrum sit? Hic recusandae quam ducimus dolore commodi maiores labore nihil deserunt, quae repellat doloremque adipisci ullam dolores. Ea quo, neque quisquam amet ad provident animi atque autem eum. Expedita tenetur explicabo asperiores excepturi consectetur quidem repellat delectus, incidunt omnis, odit blanditiis praesentium molestiae. In voluptate quo earum adipisci eligendi omnis quisquam voluptates, distinctio labore nihil commodi ratione eum? Id repellendus aut ullam vel eos! Id dolor, ipsam provident saepe nostrum pariatur quidem excepturi nemo asperiores. Dolorum error molestiae veniam rerum veritatis obcaecati, cum minima? Minima tempora perspiciatis et aliquam amet, odit, obcaecati odio similique deleniti architecto, modi vero aut. Fugit minima, quo animi soluta, tenetur porro voluptatem debitis aut accusantium deserunt illo.</p>
-      </section>
-
-      <script src="./scripts/btnToggle.js"></script>
-      <script src="./scripts/calcMoney.js"></script>
-      <script src="./scripts/function.js"></script>
-    </body>
+    <script src="./scripts/btnToggle.js"></script>
+    <script src="./scripts/calcMoney.js"></script>
+    <script src="./scripts/function.js"></script>
+  </body>
 </html>
