--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         },
       };
     </script>
+    <!-- google font inside css style tag -->
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
     </style>
@@ -35,17 +36,17 @@
       <div class="navbar pt-3 pb-5">
         <div class="w-full lg:w-10/12 mx-auto">
           <div class="navbar-start">
-            <button class="btn bg-btn_color px-7 font-semibold lg:text-xl">
+            <button id="blog" class="btn bg-btn_color px-7 font-semibold lg:text-xl">
               Blog
             </button>
           </div>
           <div
-            class="navbar-center lg:space-x-4 flex justify-center items-center"
+            class="navbar-center space-x-1 lg:space-x-4 flex justify-center items-center"
           >
             <img class="w-6 lg:w-10" src="./assets/logo.png" alt="" />
             <p class="lg:text-xl text-sm font-semibold">Donate Bangladesh</p>
           </div>
-          <div class="navbar-end lg:space-x-2 flex items-center">
+          <div class="navbar-end space-x-1 lg:space-x-2 flex items-center">
             <img class="w-6 lg:w-10" src="./assets/coin.png" alt="" />
             <p class="font-medium text-sm lg:text-xl text-slate-600">
               <span id="walet-money">5500</span> BDT
