solve FAQ overlaping problem

--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <!-- navbar start -->
-    <div class="sticky top-0 bg-slate-100/60 backdrop-blur-md">
+    <div class="sticky top-0 bg-slate-100/60 backdrop-blur-md z-10">
         <div class="navbar pt-3 pb-5">
           <div class="w-full lg:w-10/12 mx-auto">
             <div class="navbar-start">
