--- a/index.html
+++ b/index.html
@@ -136,12 +136,7 @@
             Donate for Flood Relief in Feni,Bangladesh
           </h1>
           <p class="text-base font-light">
-            The recent floods in Noakhali have caused significant damage to
-            homes infrastructure. Your donation will help provide essential
-            supplies and to those affected by this disaster. Every contribution,
-            big or small, makes difference. Please join us in supporting the
-            relief efforts and making a positive impact on the lives of those in
-            need.
+            Feni, Bangladesh, is grappling with devastating floods that have left thousands displaced and in urgent need of assistance. Your generous donation can make a significant difference. Contribute to provide essential supplies like food, water, shelter, and medical care to those affected by this natural disaster. Every donation, no matter the size, can help rebuild lives and communities. Let's come together to support Feni.
           </p>
           <input
             id="feni-flood"
@@ -179,15 +174,10 @@
           BDT
         </div>
         <h1 class="font-bold text-xl">
-          Donate for Flood Relief in Feni,Bangladesh
+          Aid for Injured in Bangladesh's Quota Movement
         </h1>
         <p class="text-base font-light">
-          The recent floods in Noakhali have caused significant damage to
-          homes infrastructure. Your donation will help provide essential
-          supplies and to those affected by this disaster. Every contribution,
-          big or small, makes difference. Please join us in supporting the
-          relief efforts and making a positive impact on the lives of those in
-          need.
+          The ongoing quota movement in Bangladesh has resulted in injuries to many protesters. Urgent medical attention and rehabilitation are crucial for their recovery. Your donation can help provide necessary medical care, medicines, and support services to those affected by the movement. Let's stand together to ensure that injured individuals receive the support they need to heal and rebuild their lives.
         </p>
         <input
           id="quota-movement"
