--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="navbar pt-3 pb-5">
         <div class="w-full lg:w-10/12 mx-auto">
           <div class="navbar-start">
-            <button id="blog" class="btn bg-btn_color px-5 font-semibold lg:text-xl">
+            <button id="blog" class="btn bg-btn_color px-5 font-semibold lg:text-lg">
               Blog
             </button>
           </div>
@@ -198,14 +198,7 @@
     <!-- cards section ends -->
     <!-- history section -->
     <section id="history" class="hidden w-10/12 mx-auto space-y-6">
-      <div class="border border-slate-200 p-8 rounded-xl">
-        <h1 class="font-semibold text-sm lg:font-bold lg:text-xl">
-          96500 Taka is Donated for famine-2024 at Feni, Bangladesh
-        </h1>
-        <p class="font-light text-sm lg:font-light lg:text-base">
-          Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)
-        </p>
-      </div>
+      
     </section>
 
     <!-- modal section -->
