change coin icon size

--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
     </style>
     <title>Blog</title>
 </head>
-<body>
+<body class="font-Lexend">
     <!-- navbar start -->
     <div class="sticky top-0 bg-slate-100/60 backdrop-blur-md z-10">
         <div class="navbar pt-3 pb-5">
@@ -49,7 +49,7 @@
               <p class="lg:text-xl text-sm font-semibold">Donate Bangladesh</p>
             </div>
             <div class="navbar-end space-x-1 lg:space-x-2 flex items-center">
-              <img class="w-6 lg:w-10" src="./assets/coin.png" alt="" />
+              <img class="w-6 lg:w-8" src="./assets/coin.png" alt="" />
               <p class="font-medium text-sm lg:text-xl text-slate-600">
                 <span id="walet-money">5500</span> BDT
               </p>
