--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </button>
           </div>
           <div
-            class="navbar-center mr-1 space-x-1 lg:space-x-4 flex justify-center items-center"
+            class="navbar-center space-x-1 lg:space-x-4 flex justify-center items-center"
           >
             <img class="w-6 lg:w-10" src="./assets/logo.png" alt="" />
             <p class="lg:text-xl text-sm font-semibold">Donate Bangladesh</p>
@@ -217,8 +217,8 @@
       </div>
     </dialog>
 
+    <script src="./scripts/function.js"></script>
     <script src="./scripts/btnToggle.js"></script>
     <script src="./scripts/calcMoney.js"></script>
-    <script src="./scripts/function.js"></script>
   </body>
 </html>
